# wcs_reprojection

./: .gitignore  AGENTS.md  README.md  SUMMARY.md  plotting.py  pyproject.toml  wcs_reproject.py  wcs_reprojection_summary.md
notebooks/: demonstrate_build_wcs_from_xradio.ipynb  plot_astro_images_with_matplotlib.ipynb  reproject_to_match_fk5_input_to_galactic_template.ipynb  reproject_to_match_minimal_same_frame.ipynb  wcs_reprojection_examples.ipynb
tests/: test_reproject_to_frame_additional_frames.py  test_reproject_to_frame_galactic.py  test_reproject_to_match_data_group.py  test_xradio_make_empty_sky_image_contract.py
